<resources>
    <string name="app_name">AgroLogistics</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="app_user_type">Agrologistics Consumer App</string>
    <string name="welcome">Welcome</string>

    <string name="menu_map">Logistic Centers</string>
    <string name="menu_news">My Pick-ups</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_language">Select language</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="categories">
        <item>High quality</item>
        <item>Medium quality</item>
        <item>Low quality</item>
    </string-array>

    <string-array name="storage_types">
        <item>Boxes</item>
        <item>Pallets</item>
    </string-array>

    <string name="menu_about">About</string>

    <string name="about_app">
        This application uses the location of your device location anonymously.\n\n
        All your information will be treated according to the European data protection law.\n\n
        It is possible to deny access to the location from the settings tab of your device.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">email@mail.com</string>
    <string name="password">password</string>
    <string name="register">Don\'t have an Account?\nClick to Register</string>
    <string name="signup">Sign up</string>
    <string name="name">name</string>
    <string name="confirm_password">confirm password</string>

    <string name="profile">Profile</string>
    <string name="consumer_name">Consumer name</string>
    <string name="consumer_email">Consumer email</string>
    <string name="pickup_details">Pickup Details</string>
    <string name="logistic_center">Logistic Center</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="storage_type">Storage Type</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="search_logistic_centers">Search logistic centers...</string>
    <string name="select_hour">Select Hour</string>
    <string name="confirm_your_pickup">Confirm Your Pick-up</string>
    <string name="confirm">Confirm</string>
    <string name="select_date">Select Date</string>
    <string name="all_fields_must_be_filled_out">All fields must be filled out</string>

</resources>
